# C_STD

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  THANKS.md
.github/workflows/: c-cpp.yml  clang.yml
include/std/: common.h  config.h  container.h  deque.h  enums.h  forward_list.h  item.h  iterator.h  linear_series.h  list.h  lock.h  memory.h  priority_deque.h  priority_queue.h  queue.h  ring.h  set.h  stack.h  typelist.h  vector.h
include/std/support/: ctz_clz.h
src/: std_container.c  std_deque.c  std_forward_list.c  std_item.c  std_list.c  std_memory.c  std_priority_deque.c  std_priority_queue.c  std_ring.c  std_vector.c
testcode/: C_STD.c  memory_counter.c  memory_counter.h
